--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="create_party">create party</string>
     <string name="session_name">session name</string>
     <string name="downvote">downvote</string>
+    <string name="choose_client_name">please choose a client name</string>
+    <string name="choose_session_name">please fill out the session name</string>
+    <string name="title_activity_playlist">PlaylistActivity</string>
+    <string name="leave_session">leave_sesssion</string>
 </resources>
