--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="setting_category_client">Client Settings</string>
     <string name="setting_preload">Number of songs to preload:</string>
     <string name="setting_port">Host Server Port:</string>
-    <string name="setting_username">Username:</string>
+    <string name="setting_username">Default Username:</string>
     <string name="settings_confirm">Confirm Changes</string>
     <string name="youtube_service.download_failed">could not resolve the song details :(</string>
     <string name="title_activity_test_frontend">TestFrontendActivity</string>
