adding youtube add link

--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="add_youtube_link">add youtube link</string>
     <string name="confirm">confirm</string>
     <string name="close">close</string>
+    <string name="add_song">add song</string>
 </resources>
