--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -20,9 +20,9 @@
     <string name="view_error_socket_closed">Establishing connection failed: Host socket port is closed.</string>
     <!-- Uncategorized -->
     <string name="join">join</string>
-    <string name="client_name">client name</string>
+    <string name="client_name">My name</string>
     <string name="create_party">create party</string>
-    <string name="session_name">session name</string>
+    <string name="session_name">Name of the session</string>
     <string name="downvote">downvote</string>
     <string name="youtube_service.download_failed">could not resolve the song details :(</string>
     <string name="title_activity_test_frontend">TestFrontendActivity</string>
