--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="play">play</string>
     <string name="songs_contained">songs contained</string>
     <string name="pause">pause</string>
-    <string name="help_host">tell others to join your party, or add songs yourself from youtube using the menu top right</string>
+    <string name="add_songs">tell others to join your party, or add songs yourself from youtube using the menu top right</string>
+    <string name="add_more_songs">add more songs, the play queue is empty!</string>
     <string name="wait_a_second">please wait</string>
 </resources>
