--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="settings_confirm">Confirm Changes</string>
     <!-- Error Strings -->
     <string name="setting_error_preload">Maximum preload count is 10</string>
-    <string name="setting_error_username">Username may not be empty</string>
-    <string name="setting_error_port">Port may not be greater than 65535</string>
+    <string name="setting_error_username">Please choose a valid username</string>
+    <string name="setting_error_port">Please choose a valid port</string>
     <string name="view_error_clientname">please choose a non-empty client name</string>
     <string name="view_error_sessionname">please choose a non-empty session name</string>
     <string name="view_error_connection_failed">Failed to establish connection to host.</string>
