basic setup working

--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="song_is_resolved">please wait, we try to fetch the song…</string>
     <string name="your_name">your name</string>
     <string name="join_party">join party</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
