--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="your_name">your name</string>
     <string name="join_party">join party</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="looking_for_parties">we are looking for parties…</string>
+    <string name="create">create</string>
 </resources>
