--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -35,6 +35,17 @@
     <string name="icons_ai_database">\ue842</string>
     <string name="icons_ai_help">\ue84e</string>
 
+    <!--Playlist context menu-->
+    <string name="add_link">Add youtube link</string>
+    <string name="show_history">History</string>
+    <string name="leave_session">Leave session</string>
+    <string name="host_info">Host info</string>
+
+    <!--MainActivity context menu-->
+    <string name="action_settings">Settings</string>
+    <string name="action_history">History</string>
+    <string name="action_help">Help</string>
+
     <!-- Uncategorized -->
     <string name="join">join</string>
     <string name="client_name">My name</string>
@@ -45,12 +56,6 @@
     <string name="title_activity_test_frontend">TestFrontendActivity</string>
     <string name="title_activity_playlist">Kompose</string>
     <string name="youtube_link">youtube link</string>
-
-    <!--Playlist context menu-->
-    <string name="add_link">Add youtube link</string>
-    <string name="show_history">History</string>
-    <string name="leave_session">Leave session</string>
-    <string name="host_info">Host info</string>
 
     <string name="add_youtube_link">add youtube link</string>
     <string name="confirm">confirm</string>
@@ -83,7 +88,6 @@
     <string name="host">hosted by</string>
     <string name="creation_date_time">created at</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
-    <string name="action_settings">Settings</string>
     <string name="join_existing_party">join an existing party and add your own songs to the playlist</string>
     <string name="start_own_party">connect your device to the music station, and start your own party</string>
     <string name="connect_manually">having trouble connecting to the party host? connect here manually</string>
