--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="pause">Pause</string>
     <string name="add_songs">Tell others to join your party, or add songs yourself from the menu on the top right.</string>
     <string name="add_more_songs">Add more songs, the play queue is empty!</string>
+    <string name="session_finished">The host has ended the session.</string>
     <string name="wait_a_second">Please wait</string>
     <string name="downvote_button">Downvote button</string>
     <string name="song_is_resolved">Please wait, we try to fetch the song…</string>
