--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="use_to_manually_connect">Use the IP and the port to manually connect to the host</string>
     <string name="past_link">Simply paste a link from youtube to include it into the playlist</string>
     <string name="resolving_song">Resolving url…</string>
+    <string name="session_finished">Your party has finished</string>
 </resources>
