--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -50,7 +50,8 @@
     <!--MainActivity context menu-->
     <string name="action_settings">Settings</string>
     <string name="action_history">History</string>
-    <string name="action_help">Help</string>
+    <string name="action_connect_title">Connecting to Host...</string>
+    <string name="action_connect_desc">This may take a moment</string>
 
     <!--Settings categories-->
     <string name="client_settings">Client settings</string>
