--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <!--MainActivity context menu-->
     <string name="action_settings">Settings</string>
     <string name="action_history">History</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_delete_all">Delete all History</string>
     <string name="action_connect_title">Connecting to Host...</string>
     <string name="action_connect_desc">This may take a moment</string>
 
